Second Updated Website AB Testing Lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,14 +132,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "sns.set_style('darkgrid')\n",
+    "import pandas as pd #importing pandas library\n",
+    "import numpy as np #importing numpy library\n",
+    "import matplotlib.pyplot as plt #importing matplotlib library\n",
+    "import seaborn as sns #importing seaborn library\n",
+    "sns.set_style('darkgrid') #setting graph style\n",
     "%matplotlib inline\n",
-    "\n",
-    "df = pd.read_csv('homepage_actions.csv')\n",
+    "df = pd.read_csv('homepage_actions.csv') #making dataframe\n",
     "print(len(df))\n",
     "df.head()"
    ]
@@ -323,9 +322,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample sizes:\tControl: 3332\tExperiment: 2996\n",
+      "Sample Sizes:\tControl: 3332\tExperiment: 2996\n",
       "Total Clicks:\tControl: 932.0\tExperiment: 928.0\n",
-      "Average click rate:\tControl: 0.2797118847539016\tExperiment: 0.3097463284379172\n"
+      "Average Click Rate:\tControl: 0.2797118847539016\tExperiment: 0.3097463284379172\n"
      ]
     },
     {
@@ -404,39 +403,15 @@
     }
    ],
    "source": [
-    "control = df[df.group=='control'].pivot(index='id', columns='action', values='count')\n",
-    "control = control.fillna(value=0)\n",
-    "\n",
-    "experiment = df[df.group=='experiment'].pivot(index='id', columns='action', values='count')\n",
-    "experiment = experiment.fillna(value=0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"Sample sizes:\\tControl: {}\\tExperiment: {}\".format(len(control), len(experiment)))\n",
-    "print(\"Total Clicks:\\tControl: {}\\tExperiment: {}\".format(control.click.sum(), experiment.click.sum()))\n",
-    "print(\"Average click rate:\\tControl: {}\\tExperiment: {}\".format(control.click.mean(), experiment.click.mean()))\n",
+    "#Convert clicks into a binary variable ona user-by-user-basis\n",
+    "control = df[df.group == 'control'].pivot(index = 'id', columns = 'action', values = 'count')\n",
+    "control = control.fillna(value = 0)\n",
+    "experiment = df[df.group == 'experiment'].pivot(index = 'id', columns = 'action', values = 'count')\n",
+    "experiment = experiment.fillna(value = 0)\n",
+    "print('Sample Sizes:\\tControl: {}\\tExperiment: {}'.format(len(control), len(experiment)))\n",
+    "print('Total Clicks:\\tControl: {}\\tExperiment: {}'.format(control.click.sum(), experiment.click.sum()))\n",
+    "print('Average Click Rate:\\tControl: {}\\tExperiment: {}'.format(control.click.mean(), experiment.click.mean()))\n",
     "control.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'flatiron_stats'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-a9b54c43b1c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mflatiron_stats\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'flatiron_stats'"
-     ]
-    }
-   ],
-   "source": [
-    "import flatiron_stats as fs"
    ]
   },
   {
@@ -467,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +483,14 @@
    "source": [
     "n = len(experiment)\n",
     "p = control_rate\n",
-    "var = n * p * (1-p)\n",
+    "var = n * p * (1 - p)\n",
     "std = np.sqrt(var)\n",
     "print(std)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +503,7 @@
    ],
    "source": [
     "actual_experiment_clicks = experiment.click.sum()\n",
-    "z_score = (actual_experiment_clicks - expected_experiment_clicks_under_null)/std\n",
+    "z_score = (actual_experiment_clicks - expected_experiment_clicks_under_null) / std\n",
     "print(z_score)"
    ]
   },
@@ -542,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +529,7 @@
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
+    "import scipy.stats as stats #import stats library\n",
     "p_val = stats.norm.sf(z_score)\n",
     "print(p_val)"
    ]
@@ -567,7 +542,7 @@
     "\n",
     "Does this result roughly match that of the previous statistical test?\n",
     "\n",
-    "> Comment: **Your analysis here**"
+    "> Comment: Both lead to rejection of the null hypothesis, even if the p-value is slightly lower. Experimental page is a more effective web design."
    ]
   },
   {
